discord-frontend/hartex-discord-commands-test/tests/ui/unexpected_end_of_attribute.stderr
error: unexpected end of attribute
  --> tests/ui/unexpected_end_of_attribute.rs:26:3
   |
26 | #[metadata]
   |   ^^^^^^^^
